Acceder a la pantalla de la franquicia desde la lista(de momento esta vacia)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Grupal_Android">
         <activity
+            android:name=".FranquiciaActivity"
+            android:exported="false" />
+        <activity
             android:name=".FranquiciaListActivity"
             android:exported="false" />
         <activity
