shopActivity (alto chance de que no vaya)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Grupal_Android"
         android:usesCleartextTraffic="true">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.tema17ejercicio1.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/configalmacen" />
+        </provider>
         <activity
             android:name=".ShopActivity"
             android:exported="false" />
