Tenemos lista de franquicias y pantalla de franquicia(falta cambiar parametros dependiendo de idioma y layout land)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
                 android:resource="@xml/configalmacen" />
         </provider>
         <activity
+            android:name=".FranquiciaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FranquiciaListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ShopActivity"
             android:exported="false" />
         <activity
