--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
 
     <application
         android:allowBackup="true"
@@ -24,6 +27,12 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAkCHHJhF4XiOTQBMJXnkV3qWRcA7yLlJA" />
+        <receiver
+            android:name=".receiver.MyReceiver" />
+        <service
+            android:name=".services.MyService"
+            android:enabled="true"
+            android:exported="true" />
         <activity
             android:name=".MapActivity"
             android:exported="false" />
